<resources>
    <string name="app_name">Urbiscor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="find_event">Find place</string>
    <string name="page__my_events">My events</string>
    <string name="page__my_subsc">Subscriptions</string>
    <string name="page__global">Global</string>

    <string name="place_item__time_start">Время встречи: %1$s</string>
    <string name="place_item__time_created">Создано: %1$s</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="login_placeholder">Логин</string>
    <string name="password_placeholder">Пароль</string>
    <string name="password_verification_placeholder">Повтор пароля</string>
    <string name="login_btn">Войти</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="link_to_register"><u>Нет аккаунта? Зарегистрироваться</u></string>
    <string name="link_to_login"><u>Уже есть аккаунт? Войти</u></string>

    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_out">Выйти</string>
    <string name="maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDKmzqwHwZxMWiW_B0oNwCL2s3Lg3Od_eA</string>
    <string name="add_place">Add place</string>
    <string name="addPlace_title">Создание события</string>
    <string name="tittle_addPlace_Placeholder">Заголовок</string>
    <string name="description_addPlace_Placeholder">Описание</string>
    <string name="category">категория</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="geocode_temp">https://maps.googleapis.com/maps/api/geocode/json?key=AIzaSyDKmzqwHwZxMWiW_B0oNwCL2s3Lg3Od_eA&amp;address=%1$s</string>
    <string name="ok">OK</string>
    <string name="filters">Фильтры</string>
    <string name="title_category_list">Выберите категорию</string>
    <string name="all">Все</string>
    <string name="meeting_time">Время встречи:</string>
    <string name="place_created">Мероприятие создано:</string>
    <string name="dot_new_place">Новое место?</string>
</resources>
